fix: remove client:load from TimeZone component and regenerate package-lock.json

--- a/src/sections/Statistics.astro
+++ b/src/sections/Statistics.astro
@@ -18,6 +18,6 @@ import TimeZone from "../components/TimeZone.astro";
   </article>
   <article>
     <h3>Time Zone</h3>
-    <TimeZone client:load />
+    <TimeZone />
   </article>
 </section>
