chore: update about me text

--- a/src/sections/AboutMe.astro
+++ b/src/sections/AboutMe.astro
@@ -2,9 +2,9 @@
   <h2 hidden aria-hidden="true">About Me</h2>
   <p><strong>Hi there 👋</strong></p>
   <p>
-    My name is Adonys Santos, a Software Engineer with a passion for web and
-    mobile development. I have experience in building applications using modern
-    technologies base on JavaScript, TypeScript and Python.
+    My name is Adonys Santos, a Software Engineer passionate about web and
+    mobile development. I have experience building applications using modern
+    JavaScript, TypeScript, and Python technologies.
   </p>
   <p>
     I am passionate about technology and always seek ways to improve and learn
