feat: add function to calculate the years of experience

--- a/src/sections/Statistics.astro
+++ b/src/sections/Statistics.astro
@@ -1,12 +1,13 @@
 ---
 import TimeZone from "../components/TimeZone.astro";
+import YearsOfExperience from "../components/YearsOfExperience.astro";
 ---
 
 <section id="statistics" class="grid">
   <h2 hidden aria-hidden="true">Statistics</h2>
   <article>
     <h3>Years of Experience</h3>
-    <p>+2 years</p>
+    <YearsOfExperience />
   </article>
   <article>
     <h3>Projects Completed</h3>
