--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,10 +17,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
-    />
+    <link rel="stylesheet" href="css/pico.min.css" />
   </head>
   <body class="container">
     <Header />
