--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,51 +6,45 @@ import { BETA_FEATURES } from "../utilities/consts";
   <nav>
     <ul>
       <li>
-        <a href="#projects" aria-hidden="true">Projects</a>
+        <a href="#projects">Projects</a>
       </li>
       <li>
-        <a href="#experience" aria-hidden="true">Experience</a>
+        <a href="#experience">Experience</a>
       </li>
       <li>
-        <a href="#education" aria-hidden="true">Education</a>
+        <a href="#education">Education</a>
       </li>
     </ul>
 
     <ul>
       <!-- TODO: move the svg icons to Astro components to better loading times -->
-      <li aria-label="My GitHub">
+      <li>
         <a
           href="https://github.com/adonyssantos"
           target="_blank"
           rel="noopener"
-          aria-hiden="true"
-          aria-busy="true"
+          aria-label="My GitHub"
         >
           <img
             src="/images/github.svg"
             alt="GitHub Icon"
             width="32"
             height="32"
-            aria-hidden="true"
-            onload="this.parentElement.setAttribute('aria-busy', 'false')"
           />
         </a>
       </li>
-      <li aria-label="My LinkedIn">
+      <li>
         <a
           href="https://www.linkedin.com/in/adonyssantos/"
           target="_blank"
           rel="noopener"
-          aria-hide="true"
-          aria-busy="true"
+          aria-label="My LinkedIn"
         >
           <img
             src="/images/linkedin.svg"
             alt="LinkedIn Icon"
             width="32"
             height="32"
-            aria-hidden="true"
-            onload="this.parentElement.setAttribute('aria-busy', 'false')"
           />
         </a>
       </li>
