chore: update projects section content

--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -4,6 +4,48 @@
     <p>Here are some of the projects I have worked on.</p>
   </hgroup>
   <article>
+    <h3 hidden aria-hidden="true">Palm Tree CSS</h3>
+    <hgroup>
+      <strong>Palm Tree CSS</strong> • <em>Open Source</em>
+      <p>
+        Palm Tree CSS is a classless CSS framework to build modern and
+        responsive web interfaces without writing any CSS or filling your HTML
+        with classes. Just write semantic and accessible HTML and let Palm Tree
+        CSS do the rest.
+      </p>
+    </hgroup>
+    <p>
+      <a
+        href="https://github.com/adonyssantos/palm-tree-css"
+        target="_blank"
+        rel="noopener">GitHub</a
+      >
+      <a href="https://palm-tree-css.vercel.app/" target="_blank" rel="noopener"
+        >Docs</a
+      >
+    </p>
+  </article>
+  <article>
+    <h3 hidden aria-hidden="true">Git Config Sync</h3>
+    <hgroup>
+      <strong>Git Config Sync</strong> • <em>Open Source</em>
+      <p>
+        Git Config Sync is a CLI tool to sync your configuration files (like
+        .gitconfig, .gitignore, .bashrc, .zshrc, etc.) across multiple machines.
+        It allows you to keep your Git configuration files in sync across
+        multiple machines and operating systems using any Git repositories
+        service like GitHub, GitLab, Bitbucket, etc.
+      </p>
+    </hgroup>
+    <p>
+      <a
+        href="https://github.com/adonyssantos/git-config-sync"
+        target="_blank"
+        rel="noopener">GitHub</a
+      >
+    </p>
+  </article>
+  <article>
     <h3 hidden aria-hidden="true">NativeTwin (React Universal)</h3>
     <hgroup>
       <strong>NativeTwin (React Universal)</strong> • <em>Open Source</em>
