--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -4,9 +4,9 @@
     <p>Here are some of the projects I have worked on.</p>
   </hgroup>
   <article>
-    <h3 hidden aria-hidden="true">Palm Tree CSS</h3>
+    <h3 hidden aria-hidden="true">🌴 Palm Tree CSS</h3>
     <hgroup>
-      <strong>Palm Tree CSS</strong> • <em>Open Source</em>
+      <strong>🌴 Palm Tree CSS</strong> • <em>Open Source</em>
       <p>
         Palm Tree CSS is a classless CSS framework to build modern and
         responsive web interfaces without writing any CSS or filling your HTML
