--- a/src/sections/Statistics.astro
+++ b/src/sections/Statistics.astro
@@ -6,7 +6,7 @@ import YearsOfExperience from "../components/YearsOfExperience.astro";
 <section id="statistics" class="grid">
   <h2 hidden aria-hidden="true">Statistics</h2>
   <article>
-    <h3>Years of Experience</h3>
+    <h3>Experience</h3>
     <YearsOfExperience />
   </article>
   <article>
