Update Experience section in Experience.astro

--- a/src/sections/Experience.astro
+++ b/src/sections/Experience.astro
@@ -4,10 +4,10 @@
     <p>Here are some of the companies I have worked for.</p>
   </hgroup>
   <article>
-    <h3 hidden aria-hidden="true">Minnek Digital Studio</h3>
+    <h3 hidden aria-hidden="true">Your Store Wizards</h3>
     <hgroup>
-      <strong>Minnek Digital Studio</strong> • <em>Software Engineer</em>
-      <p><small>Sep 2023 - Present</small></p>
+      <strong>Your Store Wizards</strong> • <em>Web Developer</em>
+      <p><small>Oct 2023 - Present</small></p>
     </hgroup>
     <p>
       Contributing e-commerce solutions for <a
@@ -15,6 +15,17 @@
         target="_blank"
         rel="noopener">Your Store Wizards</a
       > to improve their customer experience.
+    </p>
+  </article>
+  <article>
+    <h3 hidden aria-hidden="true">Minnek Digital Studio</h3>
+    <hgroup>
+      <strong>Minnek Digital Studio</strong> • <em>Software Engineer</em>
+      <p><small>Sep 2023 - Present</small></p>
+    </hgroup>
+    <p>
+      Contributing to various projects in collaboration with a team of
+      developers.
     </p>
   </article>
   <article>
