feat: add social icons accessibility

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,14 +23,16 @@ import { BETA_FEATURES } from "../utilities/consts";
           href="https://github.com/adonyssantos"
           target="_blank"
           rel="noopener"
-          aria-label="My GitHub"
+          aria-labelledby="github-profile"
         >
           <img
+            aria-hidden="true"
             src="/images/github.svg"
             alt="GitHub Icon"
             width="32"
             height="32"
           />
+          <span id="github-profile" hidden>My GitHub: adonyssantos</span>
         </a>
       </li>
       <li>
@@ -38,14 +40,16 @@ import { BETA_FEATURES } from "../utilities/consts";
           href="https://www.linkedin.com/in/adonyssantos/"
           target="_blank"
           rel="noopener"
-          aria-label="My LinkedIn"
+          aria-labelledby="linkedin-profile"
         >
           <img
+            aria-hidden="true"
             src="/images/linkedin.svg"
             alt="LinkedIn Icon"
             width="32"
             height="32"
           />
+          <span id="linkedin-profile" hidden>My LinkedIn: adonyssantos</span>
         </a>
       </li>
       {
