--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,7 @@
 ---
 import { BETA_FEATURES } from "../utilities/consts";
+import GitHubIcon from "./GitHubIcon.astro";
+import LinkedInIcon from "./LinkedInIcon.astro";
 ---
 
 <header>
@@ -17,7 +19,6 @@ import { BETA_FEATURES } from "../utilities/consts";
     </ul>
 
     <ul>
-      <!-- TODO: move the svg icons to Astro components to better loading times -->
       <li>
         <a
           href="https://github.com/adonyssantos"
@@ -25,13 +26,7 @@ import { BETA_FEATURES } from "../utilities/consts";
           rel="noopener"
           aria-labelledby="github-profile"
         >
-          <img
-            aria-hidden="true"
-            src="/images/github.svg"
-            alt="GitHub Icon"
-            width="32"
-            height="32"
-          />
+          <GitHubIcon aria-hidden="true" width="32" height="32" />
           <span id="github-profile" hidden>My GitHub: adonyssantos</span>
         </a>
       </li>
@@ -42,13 +37,7 @@ import { BETA_FEATURES } from "../utilities/consts";
           rel="noopener"
           aria-labelledby="linkedin-profile"
         >
-          <img
-            aria-hidden="true"
-            src="/images/linkedin.svg"
-            alt="LinkedIn Icon"
-            width="32"
-            height="32"
-          />
+          <LinkedInIcon aria-hidden="true" width="32" height="32" />
           <span id="linkedin-profile" hidden>My LinkedIn: adonyssantos</span>
         </a>
       </li>
