feat: make header sticky

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const { lang } = Astro.props;
 const t = useTranslations(lang);
 ---
 
-<header>
+<header class="sticky">
   <nav>
     <ul>
       <li>
