--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -10,7 +10,7 @@ const posts = (await getBlogPosts())
   ?.filter((blog) => {
     return blog?.data?.lang === lang;
   })
-  .sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
 export async function getStaticPaths() {
   return LANGUAGES_KEYS.map((lang) => {
