--- a/src/sections/LatestPosts.astro
+++ b/src/sections/LatestPosts.astro
@@ -1,7 +1,7 @@
 ---
 import FormattedDate from "../components/FormattedDate.astro";
 import { getBlogPosts } from "../content/config";
-import { LanguageKey } from "../i18n/utils";
+import { type LanguageKey } from "../i18n/utils";
 
 type Props = { lang: LanguageKey };
 
