--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import { useTranslations, type LanguageKey } from "../i18n/utils";
+import { type LanguageKey } from "../i18n/utils";
 
 type Props = {
   title: string;
@@ -11,8 +11,6 @@ type Props = {
 };
 
 const { title, description, lang } = Astro.props;
-
-const t = useTranslations(lang as LanguageKey);
 ---
 
 <!doctype html>
