feat: remove unneded fonts preload

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,8 +57,7 @@ const t = useTranslations(lang);
           aria-labelledby="rss-feed"
         >
           <RssIcon aria-hidden="true" width="32" height="32" />
-          <span id="linkedin-profile" hidden
-            >My blog RSS Feed on {LANGUAGES[lang]}</span
+          <span id="rss-feed" hidden>My blog RSS Feed on {LANGUAGES[lang]}</span
           >
         </a>
       </li>
