--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,12 @@
     }
 }
 
+@media only screen and (prefers-color-scheme: dark) {
+    :root:not([data-theme]) {
+        --pico-muted-color: #CACBCE;
+    }
+}
+
 .container-fluid {
     max-width: 1200px;
     margin-inline: auto;
