--- a/src/sections/Education.astro
+++ b/src/sections/Education.astro
@@ -1,7 +1,18 @@
+---
+import { type LanguageKey, useTranslations } from "../i18n/utils";
+
+type Props = {
+  lang: LanguageKey;
+};
+
+const { lang } = Astro.props;
+const t = useTranslations(lang);
+---
+
 <section id="education">
   <hgroup>
-    <h2>Education</h2>
-    <p>Here are some of the schools I have attended.</p>
+    <h2>{t("section.education.title")}</h2>
+    <p>{t("section.education.description")}</p>
   </hgroup>
   <article>
     <h3 hidden aria-hidden="true">Cincinnatus Institute of Craftsmanship</h3>
