refactor: update the value of the TZ to get it from a const

--- a/src/components/TimeZone.astro
+++ b/src/components/TimeZone.astro
@@ -1,6 +1,10 @@
+---
+import { MY_TIMEZONE } from "../utilities/consts";
+---
+
 <hgroup>
   <p><time id="time-zone" aria-busy="true"></time></p>
-  <p><small>GMT-4</small></p>
+  <p><small>GMT{MY_TIMEZONE}</small></p>
 </hgroup>
 
 <script>
