chore: add Fira Code font styles and update global CSS

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,6 +9,7 @@ import {
 	LANGUAGES_KEYS,
 } from "../i18n/utils";
 import "../styles/pico.min.css";
+import "../styles/fira_code.css";
 import "../styles/global.css";
 
 type Props = {
