--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
 import HeaderLink from "./HeaderLink.astro";
-import LangLink from "./LangLink.astro";
 import { BETA_FEATURES } from "../utilities/consts";
 import GitHubIcon from "./GitHubIcon.astro";
 import LinkedInIcon from "./LinkedInIcon.astro";
+import LanguagePicker from "./LanguagePicker.astro";
 import RssIcon from "./RssIcon.astro";
 import { useTranslations, type LanguageKey } from "../i18n/utils";
 
@@ -63,15 +63,7 @@ const t = useTranslations(lang);
         <span aria-hidden="true">|</span>
       </li>
       <li>
-        <details class="dropdown">
-          <summary data-language-picker={lang}>
-            {lang}
-          </summary>
-          <ul dir="rtl">
-            <li><LangLink language="en" isActive={lang == "en"} /></li>
-            <li><LangLink language="es" isActive={lang == "es"} /></li>
-          </ul>
-        </details>
+        <LanguagePicker currentLang={lang} />
       </li>
       {
         BETA_FEATURES.search && (
@@ -110,33 +102,3 @@ const t = useTranslations(lang);
     )
   }
 </header>
-
-<style>
-  @media screen and (min-width: 425px) {
-    [data-language-picker] {
-      min-width: 135px;
-    }
-  }
-</style>
-
-<script>
-  import { DEFAULT_LANG, type LanguageKey, LANGUAGES } from "../i18n/utils";
-
-  function handleResize() {
-    const $languagePicker = document.querySelector("[data-language-picker]");
-
-    if (!$languagePicker) return;
-
-    const currentLanguage =
-      ($languagePicker.getAttribute("data-language-picker") as LanguageKey) ||
-      DEFAULT_LANG;
-
-    $languagePicker.textContent =
-      window.innerWidth < 425
-        ? currentLanguage
-        : `🌐 ${LANGUAGES[currentLanguage]}`;
-  }
-
-  window.addEventListener("resize", handleResize);
-  handleResize();
-</script>
