fix: change blog card image alt text

--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -34,7 +34,7 @@ const t = useTranslations(lang);
               width={720}
               height={360}
               src={post.data.heroImage}
-              alt={post.body}
+              alt={post.data.title}
             />
             <footer>
               <h4 class="title">{post.data.title}</h4>
