--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,7 +38,7 @@ const alternateLinks = LANGUAGES_KEYS.map((_lang: LanguageKey) => {
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/images/favicons/favicon-1.png" />
 <meta name="generator" content={Astro.generator} />
 <link rel="sitemap" href="/sitemap-index.xml" />
 
