--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -18,6 +18,6 @@ export async function getStaticPaths() {
 }
 ---
 
-<Layout title={t("site.title")} description={t("site.description")} lang={lang}>
+<Layout description={t("site.description")} lang={lang}>
   <HomePage lang={lang} />
 </Layout>
