fix: make title prop optional in Layout component

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Footer from "../components/Footer.astro";
 import { useTranslations, type LanguageKey } from "../i18n/utils";
 
 type Props = {
-  title: string;
+  title?: string;
   description: string;
   lang: LanguageKey;
 };
