--- a/src/sections/LatestPosts.astro
+++ b/src/sections/LatestPosts.astro
@@ -32,8 +32,12 @@ const t = useTranslations(lang);
                     <p>{post.data.description}</p>
                 </hgroup>
                 <p>
-                    <a href={`/${lang || ""}/blog/${post.blog_slug}`}>
+                    <a
+                        href={`/${lang || ""}/blog/${post.blog_slug}`}
+                        aria-labelledby={post.id}
+                    >
                         {t("section.latest_posts.read_more")}
+                        <span id={post.id}>{post.data.title}</span>
                     </a>
                 </p>
             </article>
