--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -20,7 +20,7 @@ export async function getStaticPaths() {
 const t = useTranslations(lang);
 ---
 
-<Layout title="Blog" description="Blog" lang={lang}>
+<Layout title={t("blog.title")} description={t("blog.description")} lang={lang}>
   <hgroup>
     <h2>{t("blog.title")}</h2>
     <p>{t("blog.description")}</p>
