--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -8,7 +8,12 @@ const { pathname } = Astro.url;
 const isActive = href === pathname || href === pathname.replace(/\/$/, "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a
+	href={href}
+	data-astro-prefetch="viewport"
+	class:list={[className, { active: isActive }]}
+	{...props}
+>
 	<slot />
 </a>
 
