--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -44,6 +44,13 @@ const alternateLinks = LANGUAGES_KEYS.map((_lang: LanguageKey) => {
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/images/favicons/favicon-1.png" />
+<link
+	rel="icon"
+	type="image/svg+xml"
+	href="/images/favicons/favicon-1--dark.png"
+	media="(prefers-color-scheme: dark)"
+/>
+
 <meta name="generator" content={Astro.generator} />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
