feat: implement og images for post and layout

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -27,7 +27,7 @@ const {
 	title,
 	lang,
 	description,
-	image = "/blog-placeholder-1.jpg",
+	image = "/images/placeholder.jpg",
 } = Astro.props;
 const alternateLinks = LANGUAGES_KEYS.map((_lang: LanguageKey) => {
 	return {
